<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_id_of_client"
        style="@style/CreditCardInputLayoutBoxes"
        android:hint="@string/id_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_id_of_client"
            style="@style/InputEditTexts"
            android:inputType="number"
            android:maxLength="@integer/maximum_credit_card_number_length" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_credit_card_number"
        style="@style/CreditCardInputLayoutBoxes"
        android:hint="@string/credit_card_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_id_of_client">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_credit_card_number"
            style="@style/InputEditTexts"
            android:inputType="number"
            android:maxLength="@integer/maximum_credit_card_number_length" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_expiration_date"
        style="@style/CreditCardInputLayoutBoxes"
        android:layout_marginEnd="@dimen/inner_vertical_input_margin"
        android:layout_marginRight="@dimen/inner_vertical_input_margin"
        android:hint="@string/expiration_date"
        app:layout_constraintEnd_toStartOf="@id/til_cvv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_credit_card_number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_expiration_date"
            style="@style/InputEditTexts"
            android:digits="01234567890/"
            android:inputType="text"
            android:maxLength="@integer/expiration_date_length_including_slash" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_cvv"
        style="@style/CreditCardInputLayoutBoxes"
        android:layout_marginStart="@dimen/inner_vertical_input_margin"
        android:layout_marginLeft="@dimen/inner_vertical_input_margin"
        android:hint="@string/cvv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/til_expiration_date"
        app:layout_constraintTop_toBottomOf="@+id/til_credit_card_number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_cvv"
            style="@style/InputEditTexts"
            android:inputType="number"
            android:maxLength="@integer/maximum_cvv_length" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_first_name"
        style="@style/CreditCardInputLayoutBoxes"
        android:layout_marginEnd="@dimen/inner_vertical_input_margin"
        android:layout_marginRight="@dimen/inner_vertical_input_margin"
        android:hint="@string/first_name"
        app:layout_constraintEnd_toStartOf="@id/til_last_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_expiration_date">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_first_name"
            style="@style/InputEditTexts" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_last_name"
        style="@style/CreditCardInputLayoutBoxes"
        android:layout_marginStart="@dimen/inner_vertical_input_margin"
        android:layout_marginLeft="@dimen/inner_vertical_input_margin"
        android:hint="@string/last_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/til_first_name"
        app:layout_constraintTop_toBottomOf="@id/til_expiration_date">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_last_name"
            style="@style/InputEditTexts" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_submit_payment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/button_vertical_padding"
        android:paddingBottom="@dimen/button_vertical_padding"
        android:text="@string/pay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_first_name" />

</androidx.constraintlayout.widget.ConstraintLayout>